--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -12,7 +12,8 @@ W celu wydajnego tworzenia oprogramowania, programiści korzystają z rozmaitych
 \section{Motywacja}
 Pomimo stworzenia PDDL, problemem jest znalezienie odpowiedniego, w pełni funkcjonalnego narzędzia. Obecnie dostępne rozwiązania posiadają istotne wady. Są to między innymi brak możliwości pracy z innym systemem  niż Windows, brakiem odpowiedniego formatowania kodu czy nieodpowiednim kolorowaniem składni. Założeniem projektu GUI4PDDL jest rozwiązanie większości niedogodności związanych z pisaniem programów w języku PDDL.
 
-Obecnie każdy znaczący język posiada co najmniej jedno środowisko programistyczne. Na rysunku \ref{fig:srodowiskoprogramistyczne} przedstawiono środowisko \emph{Code::Blocks}\footnote{http://www.codeblocks.org/}, które jest obecnie najpopularniejszym nadzędziem wspomagającym pisanie w języku C++ .
+Obecnie istnieją środowiska programistyczne dla wielu języków. Na rysunku \ref{fig:srodowiskoprogramistyczne} przedstawiono środowisko \emph{Code::Blocks}\footnote{http://www.codeblocks.org/}, które jest 
+jednym z narzędzi wspomagających programowanie w języku C++.
 
 \begin{figure}[h!]
     \centering
