--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -180,7 +180,7 @@ pominie zagnieżdżone konstrukcje i spowoduje przejście do linii 14.
 \subsection{Tworzenie indeksu}
 \label{subsec:indeks}
 Na podstawie abstrakcyjnego drzewa składniowego tworzony jest indeks kodu. 
-Gramatyka opisująca analizator drzewowy znajduje się w pliku \texttt{PDDLModelBuilder.g}.
+Gramatyka opisująca analizator drzew znajduje się w pliku \texttt{PDDLModelBuilder.g}.
 
 Klasy będące modelami struktur PDDL i wchodzące w skład indeksu znajdują się w~pakiecie
 \texttt{pl.poznan.put.cs.gui4pddl.codemodel}. Schemat zależności pomiędzy tymi klasami
@@ -213,7 +213,7 @@ zmienne w czasie \emph{fluent}, oraz typy złożone \emph{either}.
 Typ \texttt{PDDLTypedList} odpowiada liście z~określeniami typów opisanej w specyfikacji PDDL.
 
 \subsection{Wykrywanie błędów semantycznych}
-Do wykrywania błędów semantycznych służy analizator drzewowy, którego gramatyka znajduje się
+Do wykrywania błędów semantycznych służy analizator drzew, którego gramatyka znajduje się
 w pliku \texttt{PDDLSyntaxChecker.g}. Przy przechodzeniu przez abstrakcyjne drzewo składniowe
 wykonywane są pewne testy mające na celu sprawdzenie, czy definicje są zgodne z opisem języka.
 Wykrywane są następujące błędy semantyczne:
