dodane podział pracy pisemnej

--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -1,5 +1,6 @@
 \hyphenation{naj-po-pu-lar-niej-szym}
 \chapter{Wstęp}
+\label{sec:wstep}
 \section{Wprowadzenie}
 Sztuczna inteligencja to dziedzina wywodząca się z informatyki. Jej początki sięgają lat pięćdziesiątych XX wieku. Jeden z pierwszych badaczy,  John McCarthy, określił sztuczną inteligencję jako ,,naukę i technikę tworzącą inteligentne maszyny''. Pomimo zmian, jakie dokonały się w przeciągu kolejnych 60 lat, definicję tę wciąż można uznać za aktualną. Sztuczna inteligencja obejmuje kilka zagadnień, między innymi logikę rozmytą, sieci neuronowe czy planowanie \cite{ai}.
 
@@ -47,21 +48,25 @@ W niniejszym podrozdziale zawarty jest zadań, wykonanych przez poszczególne os
 \item Moduł analizy kodu PDDL
 \item Wykrywanie błędów składniowych i semantycznych
 \item Podpowiadanie składni
+\item Praca pisemna, rozdziały: \ref{sec:antlrśrodowisko}, \ref{sec:przetwarzanie}, \ref{sec:podsumowanie}
 \end{itemize}
   \item[Mateusz Michalak] \hfill 
     \begin{itemize}
 \item Testy jednostkowe i integracyjne tworzonego oprogramowania
 \item Witryna internetowa
+\item Praca pisemna, rozdziały: \ref{sec:wstep}, \ref{sec:drugi}, \ref{sec:testy}
 \end{itemize}
   \item[Wojciech Rybicki] \hfill 
     \begin{itemize}
 \item Integracja wtyczki z istniejącymi narzędziami automatycznego planowania
 \item Moduł do przeglądania danych wyjściowych
+\item Praca pisemna, rozdziały: \ref{sec:piaty}, \ref{sec:wspolpraca}
 \end{itemize}
   \item[Andrzej Płuszka] \hfill 
     \begin{itemize}
 \item Edytor kodu PDDL i jego integracja z środowiskeim \textit{Eclipse}
 \item Kolorowanie i podpowiadanie składni
+\item Praca pisemna, rozdziały: \ref{sec:specyfikacja}, \ref{sec:eclipseśrodowisko}, \ref{sec:zarzadzanie}, \ref{sec:edytor}
 \end{itemize}
 \end{description}
 
