--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -65,7 +65,7 @@ W niniejszym podrozdziale zawarty jest zadań, wykonanych przez poszczególne os
   \item[Andrzej Płuszka] \hfill 
     \begin{itemize}
 \item Edytor kodu PDDL i jego integracja z środowiskeim \textit{Eclipse}
-\item Kolorowanie i podpowiadanie składni
+\item Kolorowanie i składni i wyświetlanie listy podpowiedzi
 \item Praca pisemna, rozdziały: \ref{sec:specyfikacja}, \ref{sec:eclipseśrodowisko}, \ref{sec:zarzadzanie}, \ref{sec:edytor}
 \end{itemize}
 \end{description}
