--- a/thesis/tex/planning.tex
+++ b/thesis/tex/planning.tex
@@ -1,5 +1,6 @@
 \hyphenation{wnio-sko-wa-nie}
 \chapter{Problematyka automatycznego planowania}
+\label{sec:drugi}
  \section{Opis dziedziny}
  \label{sec:opis}
 Automatyczne planowanie to poddziedzina sztucznej inteligencji, która dotyczy wykonywania sekwencji akcji, realizacji strategii lub generowania planów, prowadzących do określonego wyniku \cite{planning}.
